# basis-hub

./: .gitignore  .replit  AGENTS.md  CLAUDE.md  DUNE_QUERIES.md  Dockerfile.api  Dockerfile.keeper  Dockerfile.worker  Makefile  PIPELINE_REPAIR_LOG.md  SPEC_wallet_indexer.md  STRATEGY.md  backfill_gaps.md  backfill_sources.md  basis_protocol_integration_guide.md  blockers.md  fix_entity_500_2026-04-19.md  foundry.toml  import_governance.py  import_history.py  main.py  package-lock.json  package.json  replit.md  requirements.txt
.claude/: settings.local.json
app/: actor_classification.py  api_usage_tracker.py  coherence.py  component_coverage.py  composition.py  computation_attestation.py  config.py  crisis_replays_loader.py  database.py  db_schema_validator.py  discovery.py  disputes.py  divergence.py  enrichment_worker.py  governance.py  historical_score_backfill.py  incidents.py  integrity.py  mcp_server.py  methodology_hashes.py  oracle_keys.py  payments.py  playground.py  pulse_generator.py  rate_limiter.py  report.py  report_attestation.py  scoring.py  scoring_engine.py  server.py  shared_rate_limiter.py  state_attestation.py  track_record.py  usage_tracker.py  wallet_profile.py  worker.py
attached_assets/: Pasted--Fix-Unknown-Issuer-for-Auto-Promoted-Stablecoins-Read-_1774804776347.txt  Pasted--SSR-for-AI-Visibility-H4-Read-AGENTS-md-and-CLAUDE-md-_1774785395896.txt  (+10 more)
basis-provenance/: Cargo.toml  static_sources.yaml
basis-provenance/src/: attestation.rs  config.rs  lib.rs  main.rs  prover.rs  source.rs  storage.rs  strategy.rs
crisis_replays/: README.md  (+1 more)
(+432 files in other folders)
