[package]
name = "basis-provenance"
version = "0.8.0"
edition = "2021"
description = "TLSNotary provenance pipeline for Basis Protocol — self-attestation with MPC-TLS proofs"

[dependencies]
# TLSNotary
tlsn-prover = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.7" }
tlsn-core = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.7" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
hyper = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Cryptography — secp256k1 self-attestation
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
sha2 = "0.10"
hex = "0.4"

# R2 / S3-compatible storage
aws-sdk-s3 = "1"
aws-config = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "1"

# UUID
uuid = { version = "1", features = ["v4"] }

[[bin]]
name = "basis-provenance"
path = "src/main.rs"
